Update index.html 改行変更

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <section id="about">
           <h2 id="indexh2">ABOUT</h2>
           <p>高校時代の同級生4人が集まったガールズバンド。<br>2010年結成。ファンの愛称は「別腹」。<br>
-            高校時代に放課後ラーメンを食べ、帰りにみたらし団子を<br>食べるのが日課になっていたことが名前の由来になっている。
+            高校時代に放課後ラーメンを食べ、帰りにみたらし団子を食べるのが日課になっていたことが名前の由来になっている。
           </p>
         </section>
         <section id="member">
@@ -66,7 +66,7 @@
           <div id="memberbox">
             <img src="image/movie.png" alt="きくらげ映画見る" width="200px">
             <h3 id="membername">きくらげ<br>-guitar-</h3>
-            <p>好きなラーメンは、味噌ラーメン。<br>大のホラー好きだが、怖いのが苦手なため基本的に<br>一人では観れない。<br>放課後みたらし団子を食べたいと言い始めたのは彼女。
+            <p>好きなラーメンは、味噌ラーメン。<br>大のホラー好きだが、怖いのが苦手なため基本的に<br>一人では観れない。<br>放課後みたらし団子を食べたいと<br>言い始めたのは彼女。
             </p>
           </div>
           <div id="memberbox">
@@ -78,7 +78,7 @@
           <div id="memberbox">
             <img src="image/gacha.png" alt="めんまガチャめぐり" width="200px">
             <h3 id="membername">めんま<br>-drum-</h3>
-            <p>好きなラーメンは、塩ラーメン。<br>かわいいものが大好きで、休日はガチャ巡りをしている。ガチャで集めたキーホルダーでカバンがすごいことになっている。</p>
+            <p>好きなラーメンは、塩ラーメン。<br>かわいいものが大好きで、<br>休日はガチャ巡りをしている。ガチャで集めたキーホルダーで<br>カバンがすごいことになっている。</p>
           </div>
         </section>
         <section id="concert">
@@ -167,3 +167,4 @@
   </body>
 
 </html>
+
