--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <div id="memberbox">
             <img src="image/gacha.png" alt="めんまガチャめぐり" width="200px">
             <h3 id="membername">めんま<br>-drum-</h3>
-            <p>好きなラーメンは、塩ラーメン。<br>かわいいものが大好きで、<br>休日はガチャ巡りをしている。ガチャで集めたキーホルダーで<br>カバンがすごいことになっている。</p>
+            <p>好きなラーメンは、塩ラーメン。<br>かわいいものが大好きで、<br>休日はガチャ巡りをしている。<br>ガチャで集めたキーホルダーで<br>カバンがすごいことになっている。</p>
           </div>
         </section>
         <section id="concert">
@@ -167,4 +167,5 @@
   </body>
 
 </html>
+
 
